--- a/tema08/ClientApp/src/app/Movies/movies-add.component.html
+++ b/tema08/ClientApp/src/app/Movies/movies-add.component.html
@@ -1,3 +1,6 @@
 <h1 id="tableLabel">AddMovies</h1>
-<input [(ngModel)]=movie.name/>
-<button class="btn btn-primary"(click)="saveMovie()">Increment</button>
+Name:
+<input [(ngModel)]=movie.name/><br />
+Release Year:
+<input [(ngModel)]=movie.releaseYear />
+<button class="btn btn-primary"(click)="saveMovie()">Save</button>
